[package]
name = "pinocchio-ata"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pinocchio = { workspace = true }
pinocchio-pubkey = { workspace = true }
